--- a/Index.html
+++ b/Index.html
@@ -47,10 +47,15 @@
           <img
             src="https://static.printler.com/cache/a/b/e/5/c/c/abe5cc2c67875c042ef463e97b75d9085f45a9fc.jpg"
             alt="dog"
-            heig
+            height="250"
+            width="250"
           />
+          <figcaption>A Meme dog</figcaption>
         </figure>
       </center>
     </main>
+    <footer>
+      <p>Dont Call me PLS +880 01784783864376</p>
+    </footer>
   </body>
 </html>
